<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hobo.inventarios.viewInventario.Inventario">

    <TextView
        android:id="@+id/tvNameInventario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nombre_inventario"
        android:layout_marginTop="@dimen/margin_top_name"
        android:textAlignment="center"
        android:textSize="@dimen/text_name_size"/>

    <TextView
        android:id="@+id/tvDescriptionInventario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvNameInventario"
        android:text="@string/descripcion"
        android:padding="@dimen/padding_views" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvContenedores"
        android:layout_width="match_parent"
        android:layout_height="@dimen/content_items_height"
        android:layout_below="@+id/tvDescriptionInventario"
        android:layout_above="@+id/btnAgregarContenedor"
        android:padding="@dimen/padding_views">

    </android.support.v7.widget.RecyclerView>

    <Button
        android:id="@+id/btnAgregarContenedor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/agregar_contenedor"
        android:letterSpacing=".5"
        android:layout_alignParentBottom="true"
        android:theme="@style/MyButtonRaised"
        android:onClick="openCrearContenedor"/>

</RelativeLayout>
